Refactor app runtime architecture for AA stability